testament/tests/shouldfail/tfile.nim
discard """
file: "notthisfile.nim"
errmsg: "undeclared identifier: 'undefined'"
"""

echo undefined
